Fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 body,
 html {
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
@@ -31,7 +32,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #f7f7f7;
   overflow-y: auto;
-
+  overflow-x: hidden;
   /*Fallback if gradeints don't work */
 
   background: #9b59b6;
